mdapipkg/unpackaged/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training_Manual</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>GOM</fullName>
                </value>
                <value>
                    <fullName>Guideline to service recovery</fullName>
                </value>
                <value>
                    <fullName>LCM</fullName>
                </value>
                <value>
                    <fullName>PHM</fullName>
                </value>
                <value>
                    <fullName>Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>GCSM</fullName>
                </value>
                <value>
                    <fullName>TDGM</fullName>
                </value>
                <value>
                    <fullName>Lounge</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
</CustomObject>